# biz-erp

./: README.md
_docs/: architecture.md  commits.md  open_studies.md
audit_service/: Dockerfile  README.md  docker-compose.yml  go.mod  main.go
client_contractor_service/: Cargo.toml  README.md
cost_center_service/: Cargo.toml  README.md
identity-provider-service/: README.md
notifications_service/: Cargo.toml  README.md
team_service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
team_service/_docs/: architecture.md  cicd.md  commit.md  commits.md  entities.md  enviroment.md  events.md  features.md  ff.md  gateway.md  grpc.md  logs.md  nfr.md  tests.md
team_service/migrations/: 20240623012137_create_accounts_table.down.sql  20240623012137_create_accounts_table.up.sql
team_service/proto/: account.proto
team_service/src/: db.rs  enviroment.rs  environment.rs  main.rs
team_service/src/event/: account_created_event.rs  mod.rs
team_service/src/kafka/: create_producer.rs  mod.rs  publisher.rs  register.rs
team_service/src/models/: account.rs  action_type_enum.rs  mod.rs
team_service/src/repositories/: account_repository.rs
team_service/src/repository/: account_repository.rs  mod.rs
team_service/src/use_case/: create_account.rs  mod.rs
