[package]
name = "team_service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "uuid",
  "chrono",
] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
rdkafka = "0.36"
serde_json = "1.0.117"
futures = "0.3.30"
prost = "0.12.6"
prost-types = "0.12.6"

[build-dependencies]
prost-build = "0.12.6"
tonic-build = "0.11.0"